--- a/src/app/navbar/profile/profile.component.html
+++ b/src/app/navbar/profile/profile.component.html
@@ -22,7 +22,7 @@
     </div>
 
     <div [ngClass]="{'hidden': !profileOpen}" id="profileDropdown"
-        class="absolute top-[100%] bg-white rounded-md w-64 text-sm border border-gray-300 shadow-lg">
+        class="absolute top-[100%] right-0 bg-white rounded-md w-64 text-sm border border-gray-300 shadow-lg">
         <div class="flex justify-center p-2">
             <div class="shrink-0">
                 <img [src]="'data:image;base64, ' + userData.profilePhoto" width="50px"
