--- a/src/app/router-breadcrumb/router-breadcrumb.component.html
+++ b/src/app/router-breadcrumb/router-breadcrumb.component.html
@@ -1,10 +1,15 @@
-<div class="flex flex-cols font-bold text-sm text-gray-950 italic">
-  <ng-container *ngFor="let breadcrumb of breadcrumbs; let last = last">
-    <ng-container *ngIf="!last">
-      <a [routerLink]="breadcrumb.url">{{ breadcrumb.label +'/' }}</a>
+<div class="flex flex-cols font-bold text-sm text-white italic">
+    <ng-container *ngFor="let breadcrumb of breadcrumbs; let last = last">
+        <ng-container *ngIf="!last">
+            <a [routerLink]="breadcrumb.url">
+                {{ breadcrumb.label }}
+                <span class="px-2 text-gray-200">
+                    >
+                </span>
+            </a>
+        </ng-container>
+        <ng-container *ngIf="last">
+            {{ breadcrumb.label }}
+        </ng-container>
     </ng-container>
-    <ng-container *ngIf="last">
-      {{ breadcrumb.label }}
-    </ng-container>
-  </ng-container>
 </div>
