--- a/src/app/trainers/trainers-details/trainers-details.component.html
+++ b/src/app/trainers/trainers-details/trainers-details.component.html
@@ -12,7 +12,7 @@
 [trainerBenefit]="trainerBenefits"
 [album]="trainerHeroAlbum"></app-trainer-benefits>
 <app-trainer-client-review
-[trainerClientReview]="trainerReview"></app-trainer-client-review>
+[trainerReview]="trainerReview"></app-trainer-client-review>
 <app-trainer-album
 [trainerPhotoALbum]="trainerPhotoAlbum"></app-trainer-album>
 <app-chat-with-trainer
