--- a/src/app/centers/center-review/center-review.component.html
+++ b/src/app/centers/center-review/center-review.component.html
@@ -12,30 +12,30 @@
         <div class="grid md:grid-cols-2 grid-cols gap-5">
             <section class="flex items-center cursor-pointer
             transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl"
-                *ngFor="let r of centerReviews?.reviews; let i = index"
+                *ngFor="let review of centerReviews; let i = index"
                 [ngClass]="{ 'hidden' : i >= 3 && !showAllReviews }">
                 <div class="mx-auto items-center justify-items-center">
                     <div
                         class="grid grid-cols-2 justify-center rounded-md m-2">
                         <div class="w-24">
-                            <img class="rounded-md" src="{{ r.photo }}">
+                            <img class="rounded-md" src="{{ review.user.profilePhoto }}">
                             <div class="flex mt-2">
                                 <i-feather name="heart" style="width: 40px;"
                                     class="font-bold text-red-600 mr-4 mt-1"></i-feather>
                                 <p class="mt-1 text-sm font-sans font-bold text-gray-600 text-right font-sans mb-2">
-                                    {{ r.likes }} people love it.
+                                    {{ review.likes }} people love it.
                                 </p>
                             </div>
                         </div>
                         <div class="md:-ml-20">
                         <p class="mt-4 text-center text-md font-sans font-bold text-red-600 uppercase">
-                            {{ r.userName }}
+                            {{ review.user.firstname }}  {{ review.user.lastname }}
                         </p>
                         <p class="mt-1 text-sm text-gray-950 w-full text-justify font-sans m-2 p-2">
-                            {{ r.comment }}
+                            {{ review.comment }}
                         </p>
                         <p class="text-sm text-gray-600 italic w-full text-right font-sans mb-2 p-2 font-bold">
-                            {{ r.date }}
+                            {{ review.date }}
                         </p>
                     </div>
                     </div>
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="mt-10 p-4 transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl"
-    *ngFor="let r of centerReviews?.reviews; let i = index" [ngClass]="{'hidden': i <= 10}">
+    *ngFor="let review of centerReviews; let i = index" [ngClass]="{'hidden': i <= 10}">
         <button class="p-1 px-2 bg-red-600 text-gray-100 font-sans font-bold rounded-md mx-auto flex justify-center"
             (click)="allReviews()">
             {{ !showAllReviews ? 'See more' : 'See less' }}
