--- a/src/app/dashboard/dashboard-todo-list/dashboard-todo-list.component.html
+++ b/src/app/dashboard/dashboard-todo-list/dashboard-todo-list.component.html
@@ -15,7 +15,7 @@
        My Todos
     </h1>
     </div>
-<div class="justify-center items-center p-1 mt-4 overflow-x-scroll font-sans" *ngIf="todoData.length > 0">
+<div class="h-64 justify-center items-center p-1 mt-4 overflow-x-scroll overflow-y-scroll font-sans" *ngIf="todoData.length > 0">
     <div class="min-w-[300px]">
         <table class="table-auto border-collapse rounded-lg text-gray-950 font-sans container">
             <tbody class="rounded-lg">
@@ -41,11 +41,10 @@
                             <div *ngIf="todo.status==='completed'" class="font-bold italic text-blue-500 mt-0 md:mt-3">
                                 {{ todo.status }}
                             </div>
-                            <div *ngIf="todo.status==='pending'" class="font-bold italic text-gray-700 mt-0 md:mt-3">
+                            <div *ngIf="todo.status==='pending'" class="font-bold italic text-red-700 mt-0 md:mt-3">
                                 {{ todo.status }}
                             </div>
-                            <div *ngIf="todo.status==='in-progress'"
-                                class="font-bold italic text-green-600 mt-0 md:mt-3">
+                            <div *ngIf="todo.status==='in-progress'" class="font-bold italic text-green-600 mt-0 md:mt-3">
                                 {{ todo.status }}
                             </div>
                         </div>
