--- a/src/app/dashboard/todo-lists/todo-list/todo-list.component.html
+++ b/src/app/dashboard/todo-lists/todo-list/todo-list.component.html
@@ -3,9 +3,42 @@
         Your Todo Tasks will appear here
     </h1>
 </div>
-<h1 class="text-gray-500 italic font-sans">
-    Total tasks {{ todoData.length }}
-</h1>
+<div class="flex justify-between p-4">
+    <div class="text-gray-500 italic font-sans">
+        Total tasks {{ todoData.length }}
+    </div>
+    <div class="text-gray-500 italic font-sans">
+        Select all <input type="checkbox" [checked]="isSelectAllChecked()" (change)="toggleSelectAll($event)">
+        <div>
+            <i-feather name="more-horizontal" (click)="toggleBulkAction(); stopPropagation($event);"
+                class="font-bold text-gray-950 mr-2 mt-1 cursor-pointer" style="width: 16px;"
+                [ngClass]="{'disabled-icon': selectedTodoIds.length === 0}">
+            </i-feather>
+        </div>
+    </div>
+    <div [ngClass]="{'hidden': !showBulkAction}" id="todoAction"
+        class="absolute grid grid-cols right-8 md:right-16 bg-white rounded-md w-30 text-sm border border-gray-300 shadow-lg">
+        <p class="flex flex items-center justify-center font-bold">
+            With selected, do?
+        </p>
+        <p (click)="submitBulkAction('in-progress')"
+            class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105">
+            Begin task
+        </p>
+        <p (click)="submitBulkAction( 'complete')"
+            class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105">
+            Complete all tasks
+        </p>
+        <p (click)="submitBulkAction('pending')"
+            class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105">
+            Restart all tasks
+        </p>
+        <p (click)="submitBulkAction('delete')"
+            class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105">
+            Delete all tasks
+        </p>
+    </div>
+</div>
 <div class="justify-center items-center p-1 mt-4 overflow-x-scroll font-sans" *ngIf="todoData.length > 0">
     <div class="min-w-[300px]">
         <table class="table-auto border-collapse rounded-lg text-gray-950 font-sans container">
@@ -35,24 +68,30 @@
                     </td>
                     <td class="border-b border-gray-400 px-4 py-2 text-sm">
                         <div class="grid grid-cols md:grid-cols-2">
-                            <div class="font-bold italic text-gray-700 mt-0 md:mt-3">
-                                task {{ todo.status }}
+                            <div *ngIf="todo.status==='completed'" class="font-bold italic text-green-700 mt-0 md:mt-3">
+                                {{ todo.status }}
+                            </div>
+                            <div *ngIf="todo.status==='pending'" class="font-bold italic text-red-700 mt-0 md:mt-3">
+                                {{ todo.status }}
+                            </div>
+                            <div *ngIf="todo.status==='in-progress'"
+                                class="font-bold italic text-blue-600 mt-0 md:mt-3">
+                                {{ todo.status }}
                             </div>
                             <div class="grid grid-cols">
                                 <div>
-                                    <i-feather name="more-horizontal" (click)="openMenu(i)"
-                                        (click)="stopPropagation($event)"
+                                    <i-feather name="more-horizontal" (click)="openMenu(i); stopPropagation($event);"
                                         class="font-bold text-gray-950 mr-2 mt-1 cursor-pointer" style="width: 16px;">
                                     </i-feather>
                                 </div>
                                 <div class="grid grid-cols md:grid-cols-2 text-sm italic text-gray-950">
                                     <div class="flex flex-cols">
-                                        <i-feather name="Rotate-ccw" (click)="updateTodoStatus(todo.id, 'pending')"
+                                        <i-feather name="Rotate-ccw" (click)="updateTodoStatus(todo.id, 'pending'); "
                                             class="font-bold text-gray-950 mr-2 mt-2 cursor-pointer"
                                             style="width: 15px;">
                                         </i-feather>
                                         <div [ngClass]="{'hidden': !menuOpen[i]}" id="todoAction"
-                                            class="absolute grid grid-cols right-8 md:right-16 bg-white rounded-md w-24 text-sm border border-gray-300 shadow-lg">
+                                            class="absolute grid grid-cols right-8 md:right-16 bg-white rounded-md w-30 text-sm border border-gray-300 shadow-lg">
                                             <p *ngIf="todo.status==='pending'"
                                                 (click)="updateTodoStatus(todo.id, 'in-progress')"
                                                 class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105">
@@ -61,12 +100,12 @@
                                             <p *ngIf="todo.status==='in-progress'"
                                                 (click)="updateTodoStatus(todo.id, 'completed')"
                                                 class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105">
-                                                Begin task
+                                                Complete task
                                             </p>
                                             <p *ngIf="todo.status==='completed'"
                                                 (click)="updateTodoStatus(todo.id, 'pending')"
                                                 class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105">
-                                                Begin task
+                                                Restart task
                                             </p>
                                             <p (click)="openUpdateTodo(todo.id)"
                                                 class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105">
@@ -76,11 +115,16 @@
                                                 class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105">
                                                 Delete
                                             </p>
+                                            <p (click)="completeTodo(todo)"
+                                                class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105">
+                                                Mark as complete ✅
+                                            </p>
                                         </div>
                                     </div>
                                     <div class="flex flex-cols">
                                         <input type="checkbox" class="" [disabled]="todo.status === 'completed'"
-                                            (change)="onCheckboxChange(todo)" [checked]="todo.status === 'completed'">
+                                            (change)="toggleSelect($event, todo);"
+                                            [checked]="todo.status === 'completed'" [checked]="todo.checked">
                                     </div>
                                 </div>
                             </div>
