--- a/src/app/landing/hero-section/hero-section.component.html
+++ b/src/app/landing/hero-section/hero-section.component.html
@@ -5,16 +5,16 @@
             <p class="px-4 lg:px-8 text-justify font-bold text-md text-gray-950 text-xl md:text-4xl">
                 {{ h.title }} <span class="font-bold text-red-600">Berliz</span>
             </p>
-            <P class="mt-2 md:mt-2 px-4 lg:px-8 text-justify text-md lg:text-lg italic text-gray-800">
+            <P class="mt-2 px-4 lg:px-8 text-justify text-md lg:text-lg italic text-gray-800">
                 Become our member today and Unlock a World of Unlimited Services
             </P>
-            <button class="mt-2 md:mt-8 text-md lg:text-lg bg-red-600 text-white py-1 px-3 hover:bg-red-700 hero-button 
+            <button class="mt-8 text-md lg:text-lg bg-red-600 text-white py-1 px-3 hover:bg-red-700 hero-button 
                 transition-all duration-300 transform hover:scale-105 focus:scale-105">
                 <a [routerLink]="['/login']">
                     Join Us Today
                 </a>
             </button>
-            <div class="mt-2 md:mt-8 flex items-center gap-10 cursor-pointer mt-5">
+            <div class="mt-8 flex items-center gap-10 cursor-pointer mt-5">
                 <div *ngFor="let s of stats"
                     class="transition-all duration-300 transform hover:scale-110 focus:scale-110">
                     <div class="flex justify-center gap-3">
