--- a/src/app/shared/newsletter-popup/newsletter-popup.component.html
+++ b/src/app/shared/newsletter-popup/newsletter-popup.component.html
@@ -14,7 +14,7 @@
                     </span>
                 </div>
                 <div class="mx-auto w-full p-2">
-                    <p class="text-gray-800 text-md italic">Stay updated with our exclusive newsletter for
+                    <p class="text-gray-800 text-sm md:text-md italic text-center">Stay updated with our exclusive newsletter for
                         thrilling insights, inspiring stories, and endless learning adventures.</p>
                     <input formControlName="email" id="email"
                         class="w-full p-2 mr-2 rounded-lg bg-gray-100 focus:outline-none border-b-2 border-gray-400 hover:border-gray-500"
